<resources>
    <string name="appName">Result saver forCCJ</string>
    <string name="stats">統計・指標算出</string>
    <string name="manage">成績閲覧・管理</string>
    <string name="option">設定</string>
    <string name="add">追加</string>
    <string name="enter">成績記入</string>
    <string name="result">試合結果</string>
    <string name="characterUsed">使用キャラ</string>
    <string name="map">マップ</string>
    <string-array name="result">
        <item>WIN</item>
        <item>LOSE</item>
        <item>DRAW</item>
    </string-array>
    <string-array name="charaList">
        <item>カギコ</item>
        <item>チノン</item>
        <item>ミヨミ</item>
        <item>ボタン</item>
        <item>パイン</item>
        <item>ツバキ</item>
        <item>紅刃</item>
        <item>チアモ</item>
        <item>ツバキ【廻】</item>
    </string-array>
    <string-array name="mapList">
        <item>ウラシブヤ</item>
        <item>ウラシブヤ2</item>
        <item>ウラオオサカ</item>
        <item>ウラオオサカ2</item>
    </string-array>
    <string name="kill">倒した数</string>
    <string name="death">倒された数</string>
    <string name="charge">充電</string>
    <string name="chain">チェイン数</string>
    <string name="runPoint">逃走P</string>
    <string name="save">保存</string>
    <string name="cancel">中止</string>
    <string name="cpuPartially">CPU混在</string>
    <string name="cpuAll">CPU戦</string>
    <string name="goalIn">ゴールイン</string>
    <string name="setNumber">数値を入力（回）</string>
    <string name="setNumber2">数値を入力（％）</string>
    <string name="setNumber3">数値を入力（Pt）</string>
    <string name="score">貢献度</string>
    <string name="defaultChara">いつも使うキャラ</string>
    <string name="winRate">勝率</string>
    <string name="total">通算成績</string>
    <string name="killRate">平均キル数</string>
    <string name="killDeath">キル数／デス数</string>
    <string name="chargeRate">平均充電率</string>
    <string name="chainRate">平均チェイン数</string>
    <string name="scoreRate">平均貢献度</string>
    <string name="deathRate">平均デス数</string>
    <string name="runRate">平均逃走P</string>
    <string name="addResult">成績記入</string>

</resources>