<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:backgroundTint="#B83232"
    tools:context=".MainActivity">


    <TextView
        android:id="@+id/textView2"
        android:layout_width="309dp"
        android:layout_height="74dp"
        android:text="@string/appName"
        android:textSize="34sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.156"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0"
        tools:ignore="TextSizeCheck" />

    <Button
        android:id="@+id/manage"
        android:layout_width="300dp"
        android:layout_height="120dp"
        android:backgroundTint="#49DEF1"
        android:text="@string/manage"
        android:textSize="34sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.193"
        tools:ignore="TextSizeCheck,TextContrastCheck" />

    <Button
        android:id="@+id/stats"
        android:layout_width="300dp"
        android:layout_height="120dp"
        android:backgroundTint="#2191EA"
        android:text="@string/stats"
        android:textSize="34sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/manage"
        app:layout_constraintVertical_bias="0.2"
        tools:ignore="TextSizeCheck" />

    <Button
        android:id="@+id/addResult"
        android:layout_width="300dp"
        android:layout_height="120dp"
        android:layout_marginBottom="108dp"
        android:text="@string/addResult"
        android:textSize="34sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/stats"
        app:layout_constraintVertical_bias="0.985" />


</androidx.constraintlayout.widget.ConstraintLayout>